<resources>
    <string name="app_name">箱表采集导航</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">欢迎使用现场数据采录系统</string>
    <string name="ammeterBox_collection_data">进入计量箱数据采集</string>
    <string name="back_button_text">退出系统</string>
    <string name="toMain_button_text">返回主页</string>
    <string name="ammeterBoxDateCollection_ScanCode_text">条形码</string>
    <string name="accourt_name_text">所属台区</string>
    <string name="instrument_type_text">设备类型</string>
    <string name="ammeter_type_text">表箱类型</string>
    <string name="install_location_text">安装地址</string>
    <string name="DETAIL_ADDRESS_TEXT">详细地址</string>
    <string name="quality_text">材质</string>
    <string name="ammeterDataCollectionRowNum_text">行数</string>
    <string name="ammeterDataCollectionColumnNum_text">列数</string>
    <string name="ammeterDataCollectionPressureClass_text">电压等级</string>
    <string name="provider_type_text">定位精度</string>
    <string name="accuracy_text">定位方式</string>
    <string name="pre_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="output_data">导出</string>
    <string name="chai_ji_qi">添加采集器</string>
    <string name="call_camera_button_text">拍照</string>
    <string name="call_zxing_button_text">扫码</string>
    <string name="install_account_text">户名</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="timeIsOut">你的注册码已经过期！</string>
    <string name="timeIsOut_ok">确定</string>
    <string name="call_math_button_text">匹配</string>
    <string name="app_caijiqiDataCollection">采集器采录</string>
    <string name="app_ammeterDataCollection">计量箱数据采录</string>
    <string name="app_ammeterSubDataCollection">箱表关系维护</string>
    <string name="app_closeSystem">关闭提示</string>
    <string name="ammeterDateCollection_ScanCode_text">计量箱条码</string>
    <string name="anzhuangdizhi_text">安装地址</string>
    <string name="ammeter_sub_type_text">设备类型</string>
    <string name="ammeter_scan_text">电表条形码</string>
    <string name="caijiqi_scan_text">采集器条形码</string>
    <string name="ammeter_zhichanghao_text">设备资产号</string>
    <string name="ammeter_row_location_text">电表表位(行)</string>
    <string name="ammeter_column_location_text">电表表位(列)</string>
    <string name="access_point_text">接入点</string>
    <string name="ammeterDataCollectionlongitude_text">经度</string>
    <string name="ammeterDataCollectionlatitude_text">纬度</string>
    <string name="address_text">地理位置</string>
    <string name="xingshu_text">卫星数</string>
    <string name="call_gps_button_text">定位</string>
    <string name="jiaoyan_text">校验</string>
    <string name="install_address">安装位置</string>
    <string name="detail_address">详细地址</string>
    <string name="savetext">保存</string>

    <string name="title_activity_meter_box">"计量箱数据采集"</string>
    <string name="title_activity_naviActivity">"导航"</string>
    <string name="title_activity_meterboxdatacollection">"电能表数据采集"</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="appbar_scrolling_view_behavior">OK</string>


    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="title_activity_navi">导航</string>

    <string name="navi_end_poi_calculate_title">我的位置到电能表-驾驶</string>
    <string name="navi_end_poi_calculate_desc">我的位置到电能表-驾驶</string>

    <string name="navi_end_poi_calculate_buxing_title">我的位置到电能表-步行</string>
    <string name="navi_end_poi_calculate_buxing_desc">我的位置到电能表-步行</string>

    <string name="navi_end_poi_calculate_qixing_title">我的位置到电能表-骑行</string>
    <string name="navi_end_poi_calculate_qixing_desc">我的位置到电能表-骑行</string>
</resources>
