<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:gravity="center" android:layout_gravity="center" android:id="@id/scrollview_ammeterBoxDateCollection" android:paddingLeft="20.0dip" android:paddingTop="30.0dip" android:paddingRight="20.0dip" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:gravity="right" android:id="@id/ammeterBoxDateCollection_ScanCode" android:layout_width="100.0dip" android:layout_height="30.0dip" android:text="@string/ammeterBoxDateCollection_ScanCode_text" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" />
                <EditText android:textSize="10.0sp" android:id="@id/ammeterBoxDateCollection_ScanCode_edit" android:layout_width="150.0dip" android:layout_height="30.0dip" android:maxLength="22" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" android:inputType="number" />
                <Button android:textSize="10.0sp" android:id="@id/ammeter_data_collection_call_zxing" android:layout_width="50.0dip" android:layout_height="30.0dip" android:text="@string/call_zxing_button_text" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:gravity="right" android:id="@id/access_point" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/accourt_name_text" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" />
                <EditText android:textSize="10.0sp" android:id="@id/access_point_edit" android:layout_width="150.0dip" android:layout_height="wrap_content" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" android:inputType="number" />
                <Button android:textSize="10.0sp" android:id="@id/ammeter_data_collection_call_zxing" android:layout_width="50.0dip" android:layout_height="30.0dip" android:text="@string/jiaoyan_text"  />

            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:gravity="right" android:id="@id/address" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/address_text" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" />
                <EditText android:textSize="10.0sp" android:id="@id/address_edit" android:layout_width="150.0dip" android:layout_height="wrap_content" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" android:inputType="text" />

                <Button
                    android:id="@id/ammeter_data_collection_call_gps"
                    android:layout_width="50.0dip"
                    android:layout_height="30.0dip"
                    android:onClick="clickDw"
                    android:text="@string/call_gps_button_text"
                    android:textSize="10.0sp" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:gravity="right" android:id="@id/accuracy" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/DETAIL_ADDRESS_TEXT" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" />
                <EditText android:textSize="10.0sp" android:id="@id/accuracy_edit" android:layout_width="150.0dip" android:layout_height="wrap_content" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" android:inputType="number" />
            </LinearLayout>

            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:gravity="right" android:id="@id/ammeterDataCollectionlongitude" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/ammeterDataCollectionlongitude_text" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" />
                <EditText android:textSize="10.0sp" android:gravity="center" android:id="@id/ammeterDataCollectionlongitude_edit" android:layout_width="150.0dip" android:layout_height="wrap_content" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" android:inputType="number" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:gravity="left" android:id="@id/ammeterDataCollectionlatitude" android:layout_width="20.0dip" android:layout_height="wrap_content" android:text="@string/ammeterDataCollectionlatitude_text" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" />
                <EditText android:textSize="10.0sp" android:gravity="center" android:id="@id/ammeterDataCollectionlatitude_edit" android:layout_width="150.0dip" android:layout_height="wrap_content" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" android:inputType="number" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:gravity="right" android:id="@id/ammeterDataCollectionRowNum" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/ammeterDataCollectionRowNum_text" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" />
                <EditText android:textSize="10.0sp" android:gravity="center" android:id="@id/ammeterDataCollectionRowNum_edit" android:layout_width="150.0dip" android:layout_height="wrap_content" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" android:inputType="number" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:gravity="left" android:id="@id/ammeterDataCollectionColumnNum" android:layout_width="20.0dip" android:layout_height="wrap_content" android:text="@string/ammeterDataCollectionColumnNum_text" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" />
                <EditText android:textSize="10.0sp" android:gravity="center" android:id="@id/ammeterDataCollectionColumnNum_edit" android:layout_width="150.0dip" android:layout_height="wrap_content" android:lineSpacingExtra="3.0dip" android:lineSpacingMultiplier="1.0" android:inputType="number" />
            </LinearLayout>


            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textSize="10.0sp" android:id="@id/ammeter_data_collection_next_step" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/next_step" />
                <Button android:textSize="10.0sp" android:id="@id/electricity_back_button_id" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/toMain_button_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>