<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@id/scrollview_ammeterDateCollection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip"
        android:paddingTop="30.0dip"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/ammeterDateCollection_ScanCode"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/ammeterDateCollection_ScanCode_text"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="10.0dip"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@id/ammeterDateCollection_ScanCode_edit"
                    android:layout_width="200.0dip"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/accourt_name_2"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/accourt_name_text"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="10.0dip"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@id/accourt_name_edit_2"
                    android:layout_width="200.0dip"
                    android:layout_height="56.0dip"
                    android:inputType="text"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/anzhuangdizhi_name"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/anzhuangdizhi_text"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="10.0dip"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@id/anzhuangdizhi_edit"
                    android:layout_width="200.0dip"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/ammeter_sub_type"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/ammeter_sub_type_text"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="10.0dip"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@id/ammeter_sub_type_edit"
                    android:layout_width="200.0dip"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/ammeter_scan"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/ammeter_scan_text"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="10.0dip"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@id/ammeter_scan_edit"
                    android:layout_width="200.0dip"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/ammeter_zhichanghao"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/ammeter_zhichanghao_text"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="10.0dip"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@id/ammeter_zhichanghao_edit"
                    android:layout_width="200.0dip"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/ammeter_row_location"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/ammeter_row_location_text"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="10.0dip"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@id/ammeter_row_location_edit"
                    android:layout_width="200.0dip"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/ammeter_column_location"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/ammeter_column_location_text"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="10.0dip"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@id/ammeter_column_location_edit"
                    android:layout_width="200.0dip"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@id/ammeter_sub_data_collection_pre_step"
                    android:layout_width="120.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_step" />

                <Button
                    android:id="@id/ammeter_sub_data_collection_output"
                    android:layout_width="120.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/output_data" />

                <Button
                    android:id="@id/chai_ji_qi_id"
                    android:layout_width="120.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/chai_ji_qi" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="left"
        android:orientation="vertical">

        <Button
            android:id="@id/ammeter_back_button_id"
            android:layout_width="120.0dip"
            android:layout_height="wrap_content"
            android:text="@string/toMain_button_text" />
    </LinearLayout>
</FrameLayout>